// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts lib generator > should configure named inputs in nx.json 1`] = `
"{
  "affected": {
    "defaultBase": "main"
  },
  "targetDefaults": {
    "build": {
      "cache": true,
      "inputs": ["default"]
    },
    "lint": {
      "cache": true
    },
    "@nx/eslint:lint": {
      "cache": true,
      "inputs": [
        "default",
        "{workspaceRoot}/eslint.config.mjs",
        "{projectRoot}/eslint.config.mjs"
      ],
      "configurations": {
        "fix": {
          "fix": true
        },
        "skip-lint": {
          "force": true
        }
      }
    },
    "@nx/vitest:test": {
      "cache": true,
      "inputs": ["default", "^default"],
      "configurations": {
        "update-snapshot": {
          "args": "--update"
        }
      }
    },
    "test": {
      "dependsOn": ["^build"],
      "inputs": ["default"]
    },
    "compile": {
      "cache": true,
      "inputs": ["default"]
    }
  },
  "namedInputs": {
    "default": [
      {
        "dependentTasksOutputFiles": "**/*",
        "transitive": true
      }
    ]
  },
  "plugins": [
    {
      "plugin": "@nx/js/typescript",
      "options": {
        "typecheck": {
          "targetName": "typecheck"
        },
        "build": {
          "targetName": "compile",
          "configName": "tsconfig.lib.json",
          "buildDepsName": "build-deps",
          "watchDepsName": "watch-deps"
        }
      }
    }
  ]
}
"
`;

exports[`ts lib generator > should generate library with custom directory > custom-dir-index.ts 1`] = `
"export function hello() {
  return 'Hello!';
}
"
`;

exports[`ts lib generator > should generate library with custom directory > custom-dir-project.json 1`] = `
"{
  "name": "@proj/test-lib",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "libs/test-lib/src",
  "projectType": "library",
  "tags": [],
  "targets": {
    "build": {
      "dependsOn": ["lint", "compile", "test"]
    },
    "compile": {
      "executor": "nx:run-commands",
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/tsc"],
      "options": {
        "command": "tsc --build tsconfig.lib.json",
        "cwd": "{projectRoot}"
      }
    },
    "lint": {
      "executor": "@nx/eslint:lint"
    },
    "test": {
      "executor": "@nx/vitest:test",
      "outputs": ["{options.reportsDirectory}"],
      "options": {
        "reportsDirectory": "{workspaceRoot}/coverage/{projectRoot}"
      }
    }
  },
  "metadata": {
    "generator": "ts#project"
  }
}
"
`;

exports[`ts lib generator > should generate library with custom directory > custom-dir-tsconfig.json 1`] = `
"{
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json"
    },
    {
      "path": "./tsconfig.spec.json"
    }
  ],
  "compilerOptions": {}
}
"
`;

exports[`ts lib generator > should generate library with default options > eslint.config.mjs 1`] = `
"import baseConfig from '../eslint.config.mjs';

export default [
  ...baseConfig,
  {
    files: ['**/*.json'],
    rules: {
      '@nx/dependency-checks': [
        'warn',
        {
          ignoredFiles: [
            '{projectRoot}/eslint.config.{js,cjs,mjs,ts,cts,mts}',
            '{projectRoot}/vite.config.{js,ts,mjs,mts}',
          ],
        },
      ],
    },
    languageOptions: {
      parser: await import('jsonc-eslint-parser'),
    },
  },
  {
    ignores: ['**/out-tsc'],
  },
];
"
`;

exports[`ts lib generator > should generate library with default options > index.ts 1`] = `
"export function hello() {
  return 'Hello!';
}
"
`;

exports[`ts lib generator > should generate library with default options > project.json 1`] = `
"{
  "name": "@proj/test-lib",
  "$schema": "../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "test-lib/src",
  "projectType": "library",
  "tags": [],
  "targets": {
    "build": {
      "dependsOn": ["lint", "compile", "test"]
    },
    "compile": {
      "executor": "nx:run-commands",
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/tsc"],
      "options": {
        "command": "tsc --build tsconfig.lib.json",
        "cwd": "{projectRoot}"
      }
    },
    "lint": {
      "executor": "@nx/eslint:lint"
    },
    "test": {
      "executor": "@nx/vitest:test",
      "outputs": ["{options.reportsDirectory}"],
      "options": {
        "reportsDirectory": "{workspaceRoot}/coverage/{projectRoot}"
      }
    }
  },
  "metadata": {
    "generator": "ts#project"
  }
}
"
`;

exports[`ts lib generator > should generate library with default options > tsconfig.json 1`] = `
"{
  "extends": "../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json"
    },
    {
      "path": "./tsconfig.spec.json"
    }
  ],
  "compilerOptions": {}
}
"
`;

exports[`ts lib generator > should generate library with subdirectory > subdir-index.ts 1`] = `
"export function hello() {
  return 'Hello!';
}
"
`;

exports[`ts lib generator > should generate library with subdirectory > subdir-project.json 1`] = `
"{
  "name": "@proj/test-lib",
  "$schema": "../../node_modules/nx/schemas/project-schema.json",
  "sourceRoot": "feature/test-lib/src",
  "projectType": "library",
  "tags": [],
  "targets": {
    "build": {
      "dependsOn": ["lint", "compile", "test"]
    },
    "compile": {
      "executor": "nx:run-commands",
      "outputs": ["{workspaceRoot}/dist/{projectRoot}/tsc"],
      "options": {
        "command": "tsc --build tsconfig.lib.json",
        "cwd": "{projectRoot}"
      }
    },
    "lint": {
      "executor": "@nx/eslint:lint"
    },
    "test": {
      "executor": "@nx/vitest:test",
      "outputs": ["{options.reportsDirectory}"],
      "options": {
        "reportsDirectory": "{workspaceRoot}/coverage/{projectRoot}"
      }
    }
  },
  "metadata": {
    "generator": "ts#project"
  }
}
"
`;

exports[`ts lib generator > should generate library with subdirectory > subdir-tsconfig.json 1`] = `
"{
  "extends": "../../tsconfig.base.json",
  "files": [],
  "include": [],
  "references": [
    {
      "path": "./tsconfig.lib.json"
    },
    {
      "path": "./tsconfig.spec.json"
    }
  ],
  "compilerOptions": {}
}
"
`;
